--- a/service/pyproject.toml
+++ b/service/pyproject.toml
@@ -5,7 +5,7 @@ description = "Plugin Service for ..."
 keywords = ["wizard", "plugin"]
 license = "MIT"
 authors = [
-    { name = "Marek Suchánek", email = "marek.suchanek@ds-wizard.org" }
+    { name = "...", email = "..." }
 ]
 classifiers = [
     "Development Status :: 5 - Production/Stable",
@@ -17,16 +17,40 @@ classifiers = [
 ]
 requires-python = ">=3.13, <4"
 dependencies = [
-    "fastapi >=0.120, <1.0",
+    "fastapi>=0.120,<1.0",
 ]
 
-[project.urls]
-Homepage = "https://ds-wizard.org"
+[dependency-groups]
+dev = [
+    "uvicorn",
+    "ruff",
+    "ty",
+]
 
 [build-system]
 requires = ["uv_build>=0.9.25,<0.10.0"]
 build-backend = "uv_build"
 
 [tool.uv.build-backend]
-module-name = "plugin_service"
 module-root = "src"
+
+[tool.ruff]
+target-version = "py313"
+line-length = 80
+indent-width = 4
+include = ["src/**/*.py"]
+
+[tool.ruff.lint]
+select = ["ALL"]
+ignore = [
+    "D",
+    "CPY"
+]
+preview = true
+
+[tool.ruff.format]
+quote-style = "single"
+indent-style = "space"
+
+[tool.ruff.lint.flake8-quotes]
+inline-quotes = "single"
